--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 
 	<link rel='stylesheet' href='css/style.css' type='text/css' media='all'>
 
+	<!-- Twitter/Facebook/Slack -->
+
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="http://alternativquartet.ro" />
+	<meta property="og:title" content="Alternativ Quartet - Turneu 2016" />
+	<meta property="og:description" content="Alternativ Quartet revin în 2016 pe scenă, după o pauză de aproape trei ani de zile, pentru un număr restrâns de concerte." />
+	<meta property="og:image" content="http://alternativquartet.ro/img/hero.jpg" />
+	 
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:domain" value="alternativquartet.ro" />
+	<meta name="twitter:title" value="Alternativ Quartet - Turneu 2016" />
+	<meta name="twitter:description" value="Alternativ Quartet revin în 2016 pe scenă, după o pauză de aproape trei ani de zile, pentru un număr restrâns de concerte." />
+	<meta name="twitter:image" content="http://alternativquartet.ro/img/hero.jpg" />
+	<meta name="twitter:url" value="http://alternativquartet.ro/" />
+
 	<title>Alternativ Quartet</title>
 </head>
 <body>	
@@ -29,9 +44,11 @@
 	</header>
 
 	<article>
-		<section id='turneu-2016'>
-			<h2>Turneu 2016</h2>
+		<section>
+			<h2 id='turneu'><span>Turneu 2016</span></h2>
 
+			<p>Alternativ Quartet revin în 2016 pe scenă, după o pauză de aproape trei ani de zile, pentru un număr restrâns de concerte.</p>
+			
 			<table class='turneu'>
 				<thead>
 					<tr>
@@ -57,8 +74,8 @@
 			</table>
 		</section>
 
-		<section id='muzica'>
-			<h2>Muzică</h2>
+		<section>
+			<h2 id='muzica'><span>Muzică</span></h2>
 
 
 			<div class='album'>
@@ -105,8 +122,8 @@
 			</div>
 		</section>
 
-		<section id='contact'>
-			<h2>Contact</h2>
+		<section>
+			<h2 id='contact'><span>Contact</span></h2>
 
 
 			<h4>Alternativ Quartet este:</h4>
@@ -117,10 +134,11 @@
 				<li>Alexandru Prigoană</li>
 			</ul>
 
-			+ 
+			<span>‡</span>
+
 			<ul>
-				<li>Dan Burzo / artwork &amp; design</li>
-				<li>Bogdan Coman / visual director</li>
+				<li>Dan Burzo &middot; artwork &amp; design</li>
+				<li>Bogdan Coman &middot; visual director</li>
 			</ul>
 
 			<p><a href='tel:+40744627235'>+40744627235</a><br><a href='mailto:alternativquartet@gmail.com'>alternativquartet@gmail.com</a></p>
