updated phone number

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 			<h2 id='turneu'><span>Turneu 2016</span></h2>
 
 			<p>Alternativ Quartet revin în 2016 pe scenă, după o pauză de aproape trei ani de zile, pentru un număr restrâns de concerte.</p>
-			
+
+			<h3>Concerte anunțate</h3>
+
 			<table class='turneu'>
 				<thead>
 					<tr>
@@ -85,7 +87,11 @@
 					<img src='/img/albume/cand-nu-cant.jpg'/>
 					<iframe scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2640663&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=true&amp;visual=false&amp;color=000000&amp;show_artwork=false"></iframe>
 				</div>
-				<p>Descarcă: <a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cand-nu-cant-mp3.zip' target='_blank'>mp3</a>, <a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cand-nu-cant-flac.zip' target='_blank'>flac</a></p>
+				<p>
+					Descarcă: 
+					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cand-nu-cant-mp3.zip'>mp3</a>, 
+					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cand-nu-cant-flac.zip'>flac</a>
+				</p>
 			</div>
 
 			<div class='album'>
@@ -95,7 +101,11 @@
 					<img src='/img/albume/cant-nu-cand.jpg'/>
 					<iframe scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2921410&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=true&amp;visual=false&amp;color=000000&amp;show_artwork=false"></iframe>
 				</div>
-				<p class='cf'>Descarcă: <a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cant-nu-cand-ep-mp3.zip' target='_blank'>mp3</a>, <a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cant-nu-cand-ep-flac.zip' target='_blank'>flac</a></p>
+				<p>
+					Descarcă: 
+					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cant-nu-cand-ep-mp3.zip'>mp3</a>, 
+					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cant-nu-cand-ep-flac.zip'>flac</a>
+				</p>
 			</div>
 
 
@@ -107,7 +117,11 @@
 					<img src='/img/albume/aripi.jpg'/>
 					<iframe scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/795774&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=true&amp;visual=false&amp;color=000000&amp;show_artwork=false"></iframe>
 				</div>
-				<p class='cf'>Descarcă: <a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-aripi-flac.zip' target='_blank'>flac</a></p>
+				<p>
+					Descarcă: 
+					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-aripi-mp3.zip'>mp3</a>, 
+					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-aripi-flac.zip'>flac</a>
+				</p>
 			</div>
 
 
@@ -118,7 +132,11 @@
 					<img src='/img/albume/linistea-astupa-goluri.jpg'/>
 					<iframe scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/795802&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=true&amp;visual=false&amp;color=000000&amp;show_artwork=false"></iframe>
 				</div>
-				<p class='cf'>Descarcă: <a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-linistea-astupa-goluri-flac.zip' target='_blank'>flac</a></p>
+				<p>
+					Descarcă: 
+					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-linistea-astupa-goluri-mp3.zip'>mp3</a>, 
+					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-linistea-astupa-goluri-flac.zip'>flac</a>
+					</p>
 			</div>
 		</section>
 
@@ -141,7 +159,7 @@
 				<li>Bogdan Coman &middot; visual director</li>
 			</ul>
 
-			<p><a href='tel:+40744627235'>+40744627235</a><br><a href='mailto:alternativquartet@gmail.com'>alternativquartet@gmail.com</a></p>
+			<p><a href='tel:+4915171533734'>+4915171533734</a><br><a href='mailto:alternativquartet@gmail.com'>alternativquartet@gmail.com</a></p>
 		</section>
 	</article>
 
