--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
 					</tr>
 
 					<tr>
+						<td>8 apr 2016</td>
+						<td>Iași</td>
+						<td><a href='https://www.facebook.com/events/1156373241046990/' target="_blank">Underground Pub</a></td>
+					</tr>
+
+					<tr>
 						<td>9 apr 2016</td>
 						<td>Cluj-Napoca</td>
 						<td><a href='https://www.facebook.com/events/824090314367958/' target='_blank'>The Shelter</a></td>
@@ -159,7 +165,7 @@
 				<li>Bogdan Coman &middot; visual director</li>
 			</ul>
 
-			<p><a href='tel:+4915171533734'>+4915171533734</a><br><a href='mailto:alternativquartet@gmail.com'>alternativquartet@gmail.com</a></p>
+			<p><a href='tel:+40744627235'>+40744627235</a><br><a href='mailto:alternativquartet@gmail.com'>alternativquartet@gmail.com</a></p>
 		</section>
 	</article>
 
@@ -167,6 +173,13 @@
 		&mdash; Alternativ Quartet, 2012&ndash;2016
 	</footer>
 	
-
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	  ga('create', 'UA-18246635-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
 </body>
 </html>
