Removed tour dates; added embedded YT videos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<h1>Alternativ Quartet</h1>	
 		<nav>
 			<ul>
-				<li><a href='#turneu'>Turneu 2016</a></li>
+				<!-- <li><a href='#turneu'>Turneu 2016</a></li> -->
 				<li><a href='#muzica'>Muzică</a></li>
 				<li><a href='#contact'>Contact</a></li>
 				<li class='separator'></li>
@@ -44,7 +44,10 @@
 	</header>
 
 	<article>
-		<section>
+
+		<iframe width="100%" height="510" src="https://www.youtube.com/embed/Ll--XTxoTqQ" frameborder="0" allowfullscreen></iframe>
+
+		<!-- <section>
 			<h2 id='turneu'><span>Turneu 2016</span></h2>
 
 			<p>Alternativ Quartet revin în 2016 pe scenă, după o pauză de aproape trei ani de zile, pentru un număr restrâns de concerte.</p>
@@ -80,7 +83,7 @@
 					</tr>
 				</tbody>
 			</table>
-		</section>
+		</section> -->
 
 		<section>
 			<h2 id='muzica'><span>Muzică</span></h2>
@@ -93,11 +96,17 @@
 					<img src='/img/albume/cand-nu-cant.jpg'/>
 					<iframe scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2640663&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=true&amp;visual=false&amp;color=000000&amp;show_artwork=false"></iframe>
 				</div>
-				<p>
-					Descarcă: 
-					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cand-nu-cant-mp3.zip'>mp3</a>, 
+				<p class='dl'>
+					Descarcă albumul 
+					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cand-nu-cant-mp3.zip'>mp3</a>
 					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cand-nu-cant-flac.zip'>flac</a>
 				</p>
+
+				<iframe width="100%" height="478" src="https://www.youtube.com/embed/rSPDjrgl5Y8" frameborder="0" allowfullscreen></iframe>
+
+				<iframe width="100%" height="478" src="https://www.youtube.com/embed/AgYXD1OSdNk" frameborder="0" allowfullscreen></iframe>
+
+				<iframe width="100%" height="478" src="https://www.youtube.com/embed/Vw1Q0Do7HSI" frameborder="0" allowfullscreen></iframe>
 			</div>
 
 			<div class='album'>
@@ -107,11 +116,13 @@
 					<img src='/img/albume/cant-nu-cand.jpg'/>
 					<iframe scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2921410&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=true&amp;visual=false&amp;color=000000&amp;show_artwork=false"></iframe>
 				</div>
-				<p>
-					Descarcă: 
-					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cant-nu-cand-ep-mp3.zip'>mp3</a>, 
+				<p class='dl'>
+					Descarcă albumul 
+					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cant-nu-cand-ep-mp3.zip'>mp3</a>
 					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cant-nu-cand-ep-flac.zip'>flac</a>
 				</p>
+
+				<iframe width="100%" height="478" src="https://www.youtube.com/embed/kVz_G8hn36U" frameborder="0" allowfullscreen></iframe>
 			</div>
 
 
@@ -123,11 +134,17 @@
 					<img src='/img/albume/aripi.jpg'/>
 					<iframe scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/795774&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=true&amp;visual=false&amp;color=000000&amp;show_artwork=false"></iframe>
 				</div>
-				<p>
-					Descarcă: 
-					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-aripi-mp3.zip'>mp3</a>, 
+				<p class='dl'>
+					Descarcă albumul 
+					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-aripi-mp3.zip'>mp3</a>
 					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-aripi-flac.zip'>flac</a>
 				</p>
+
+				<iframe width="100%" height="478" src="https://www.youtube.com/embed/s5kRrEpQWoI" frameborder="0" allowfullscreen></iframe>
+
+				<iframe width="100%" height="478" src="https://www.youtube.com/embed/ZiWUQ1QT198" frameborder="0" allowfullscreen></iframe>
+
+				<iframe width="100%" height="478" src="https://www.youtube.com/embed/5FeqodqWrTg" frameborder="0" allowfullscreen></iframe>
 			</div>
 
 
@@ -138,11 +155,11 @@
 					<img src='/img/albume/linistea-astupa-goluri.jpg'/>
 					<iframe scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/795802&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=true&amp;visual=false&amp;color=000000&amp;show_artwork=false"></iframe>
 				</div>
-				<p>
-					Descarcă: 
-					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-linistea-astupa-goluri-mp3.zip'>mp3</a>, 
+				<p class='dl'>
+					Descarcă albumul 
+					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-linistea-astupa-goluri-mp3.zip'>mp3</a>
 					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-linistea-astupa-goluri-flac.zip'>flac</a>
-					</p>
+				</p>
 			</div>
 		</section>
 
