--- a/index.html
+++ b/index.html
@@ -8,36 +8,36 @@
 	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico'/>
 	<link rel='icon' type='image/x-icon' href='favicon.ico'/>
 
+	<link rel="stylesheet" href="https://use.typekit.net/qrp3yyq.css">
 	<link rel='stylesheet' href='css/style.css' type='text/css' media='all'>
 
 	<!-- Twitter/Facebook/Slack -->
 
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://alternativquartet.ro" />
-	<meta property="og:title" content="Alternativ Quartet - Turneu 2016" />
-	<meta property="og:description" content="Alternativ Quartet revin în 2016 pe scenă, după o pauză de aproape trei ani de zile, pentru un număr restrâns de concerte." />
-	<meta property="og:image" content="http://alternativquartet.ro/img/hero.jpg" />
+	<meta property="og:title" content="Iglu / Alternativ Quartet - Turneu 2019" />
+	<meta property="og:description" content="Alternativ Quartet revin în 2019 pe scenă, după o pauză de aproape trei ani de zile, pentru un număr restrâns de concerte alături de To the South, Bluebird." />
+	<meta property="og:image" content="http://alternativquartet.ro/img/hero-aq.png" />
 	 
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:domain" value="alternativquartet.ro" />
-	<meta name="twitter:title" value="Alternativ Quartet - Turneu 2016" />
-	<meta name="twitter:description" value="Alternativ Quartet revin în 2016 pe scenă, după o pauză de aproape trei ani de zile, pentru un număr restrâns de concerte." />
-	<meta name="twitter:image" content="http://alternativquartet.ro/img/hero.jpg" />
+	<meta name="twitter:title" value="Iglu / Alternativ Quartet - Turneu 2019" />
+	<meta name="twitter:description" value="Alternativ Quartet revin în 2019 pe scenă, după o pauză de aproape trei ani de zile, pentru un număr restrâns de concerte alături de To the South, Bluebird." />
+	<meta name="twitter:image" content="http://alternativquartet.ro/img/hero-aq.png" />
 	<meta name="twitter:url" value="http://alternativquartet.ro/" />
 
-	<title>Alternativ Quartet</title>
+	<title>Iglu / Alternativ Quartet</title>
 </head>
 <body>	
 	<header>
-		<h1>Alternativ Quartet</h1>	
+		<h1>Iglu <span class='slash'>/</span> Alternativ Quartet</h1>	
 		<nav>
 			<ul>
-				<!-- <li><a href='#turneu'>Turneu 2016</a></li> -->
-				<li><a href='#muzica'>Muzică</a></li>
+				<li><a href='#turneu'>Turneu 2019</a></li>
+				<li><a href='#download'>Download</a></li>
 				<li><a href='#contact'>Contact</a></li>
 				<li class='separator'></li>
 				<li><a href='http://fb.com/alternativquartet' target='_blank'>Facebook</a></li>
-				<li><a href='https://soundcloud.com/alternativquartet' target='_blank'>SoundCloud</a></li>
 				<li><a href='http://youtube.com/aqlag' target='_blank'>YouTube</a></li>
 			</ul>
 		</nav>
@@ -45,14 +45,15 @@
 
 	<article>
 
-		<iframe width="100%" height="510" src="https://www.youtube.com/embed/Ll--XTxoTqQ" frameborder="0" allowfullscreen></iframe>
+		<!-- Nu uita că te aștept -->
+		<div class='yt'>
+			<iframe src="https://www.youtube.com/embed/Wqo6l4mfHv4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
 
-		<!-- <section>
-			<h2 id='turneu'><span>Turneu 2016</span></h2>
+		<section>
+			<h2 id='turneu'><span>Turneu 2019</span></h2>
 
-			<p>Alternativ Quartet revin în 2016 pe scenă, după o pauză de aproape trei ani de zile, pentru un număr restrâns de concerte.</p>
-
-			<h3>Concerte anunțate</h3>
+			<p>Alternativ Quartet revin în 2019 pe scenă, după o pauză de aproape trei ani de zile, pentru un număr restrâns de concerte alături de <a href='https://swarmsandthesun.bandcamp.com/releases'>To the South, Bluebird</a>.</p>
 
 			<table class='turneu'>
 				<thead>
@@ -65,101 +66,143 @@
 				<tbody>
 
 					<tr>
-						<td>7 apr 2016</td>
+						<td>29 mai 2019</td>
+						<td>Brașov</td>
+						<td><a href='https://www.facebook.com/events/2154219724827468/' target="_blank">Rockstadt</a></td>
+					</tr>
+
+					<tr>
+						<td>30 mai 2019</td>
 						<td>București</td>
-						<td><a href='https://www.facebook.com/events/464021147129040/' target="_blank">Control Club</a></td>
+						<td><a href='https://www.facebook.com/events/1196838363813679/' target="_blank">Control Club</a></td>
 					</tr>
 
 					<tr>
-						<td>8 apr 2016</td>
-						<td>Iași</td>
-						<td><a href='https://www.facebook.com/events/1156373241046990/' target="_blank">Underground Pub</a></td>
-					</tr>
-
-					<tr>
-						<td>9 apr 2016</td>
+						<td>31 mai 2019</td>
 						<td>Cluj-Napoca</td>
-						<td><a href='https://www.facebook.com/events/824090314367958/' target='_blank'>The Shelter</a></td>
+						<td><a href='https://www.facebook.com/events/223384258575628/' target='_blank'>/Form Space</a></td>
+					</tr>
+
+					<tr>
+						<td>1 iunie 2019</td>
+						<td>Timișoara</td>
+						<td><a href='https://www.facebook.com/events/370944126802444/' target='_blank'>Reflektor</a></td>
 					</tr>
 				</tbody>
 			</table>
-		</section> -->
+		</section>
 
 		<section>
-			<h2 id='muzica'><span>Muzică</span></h2>
+			<h2 id='download'><span>Download</span></h2>
 
+			<!-- <div class='a9bum'> -->
+				<h3>Iglu <span class='slash'>/</span> Stasis</h3>
+				<h4>23 septembrie 2017</h4>
+				<a 
+					class='album__cover' 
+					href='https://s3.eu-central-1.amazonaws.com/alternativquartet/iglu-stasis-mp3.zip'
+				>
+					<img src='/img/albume/iglu-stasis.jpg'/>
+				</a>
+
+				<div class='album__links'>
+					<a 
+						class='album__link album__link--apple' 
+						href='https://itunes.apple.com/ro/album/stasis/1446971145'
+						target='_blank'
+					></a>
+					<a 
+						class='album__link album__link--spotify'
+						href='https://open.spotify.com/album/5G3w6dT1uUtIT0VZ7eTdtn'
+						target='_blank'
+					></a>
+				</div>
+			</div>
 
 			<div class='album'>
 				<h3>Când nu cânt</h3>
 				<h4>10 decembrie 2012</h4>
-				<div class='embed'>
+				<a 
+					class='album__cover' 
+					href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cand-nu-cant-mp3.zip'
+				>
 					<img src='/img/albume/cand-nu-cant.jpg'/>
-					<iframe scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2640663&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=true&amp;visual=false&amp;color=000000&amp;show_artwork=false"></iframe>
+				</a>
+
+				<div class='album__links'>
+					<a 
+						class='album__link album__link--apple'
+						href='https://itunes.apple.com/ro/album/c%C3%A2nd-nu-c%C3%A2nt/1446084870'
+						target='_blank'
+					></a>
+					<a 
+						class='album__link album__link--spotify'
+						href='https://open.spotify.com/album/70zJlxetV8fHMPfRIC4xEY'
+						target='_blank'
+					></a>
 				</div>
-				<p class='dl'>
-					Descarcă albumul 
-					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cand-nu-cant-mp3.zip'>mp3</a>
-					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cand-nu-cant-flac.zip'>flac</a>
-				</p>
-
-				<iframe width="100%" height="478" src="https://www.youtube.com/embed/rSPDjrgl5Y8" frameborder="0" allowfullscreen></iframe>
-
-				<iframe width="100%" height="478" src="https://www.youtube.com/embed/AgYXD1OSdNk" frameborder="0" allowfullscreen></iframe>
-
-				<iframe width="100%" height="478" src="https://www.youtube.com/embed/Vw1Q0Do7HSI" frameborder="0" allowfullscreen></iframe>
 			</div>
 
 			<div class='album'>
 				<h3>Cânt nu când EP</h3>
 				<h4>10 decembrie 2012</h4>
-				<div class='embed'>
+				<a class='album__cover' href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cant-nu-cand-ep-mp3.zip'>
 					<img src='/img/albume/cant-nu-cand.jpg'/>
-					<iframe scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2921410&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=true&amp;visual=false&amp;color=000000&amp;show_artwork=false"></iframe>
+				</a>
+
+				<div class='album__links'>
+					<a 
+						class='album__link album__link--apple'
+						href='https://itunes.apple.com/ro/album/c%C3%A2nt-nu-c%C3%A2nd/1446084917'
+						target='_blank'
+					></a>
+					<a 
+						class='album__link album__link--spotify'
+						href='https://open.spotify.com/album/4ePMy6FUiknHOPxZ96uRSI'
+						target='_blank'
+					></a>
 				</div>
-				<p class='dl'>
-					Descarcă albumul 
-					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cant-nu-cand-ep-mp3.zip'>mp3</a>
-					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cant-nu-cand-ep-flac.zip'>flac</a>
-				</p>
-
-				<iframe width="100%" height="478" src="https://www.youtube.com/embed/kVz_G8hn36U" frameborder="0" allowfullscreen></iframe>
 			</div>
-
-
 
 			<div class='album'>
 				<h3>Aripi</h3>
 				<h4>15 mai 2011</h4>
-				<div class='embed'>
+				<a class='album__cover' href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-aripi-mp3.zip'>
 					<img src='/img/albume/aripi.jpg'/>
-					<iframe scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/795774&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=true&amp;visual=false&amp;color=000000&amp;show_artwork=false"></iframe>
+				</a>
+
+				<div class='album__links'>
+					<a 
+						class='album__link album__link--apple'
+						href='https://itunes.apple.com/ro/album/aripi/1447303981'
+						target='_blank'
+					></a>
+					<a 
+						class='album__link album__link--spotify'
+						href='https://open.spotify.com/album/6crkwQox4an7Qrz3tKyRTP'
+						target='_blank'
+					></a>
 				</div>
-				<p class='dl'>
-					Descarcă albumul 
-					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-aripi-mp3.zip'>mp3</a>
-					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-aripi-flac.zip'>flac</a>
-				</p>
-
-				<iframe width="100%" height="478" src="https://www.youtube.com/embed/s5kRrEpQWoI" frameborder="0" allowfullscreen></iframe>
-
-				<iframe width="100%" height="478" src="https://www.youtube.com/embed/ZiWUQ1QT198" frameborder="0" allowfullscreen></iframe>
-
-				<iframe width="100%" height="478" src="https://www.youtube.com/embed/5FeqodqWrTg" frameborder="0" allowfullscreen></iframe>
 			</div>
 
 
 			<div class='album'>
 				<h3>Liniștea astupă goluri</h3>
 				<h4>30 august 2010</h4>
-				<div class='embed cf'>
-					<img src='/img/albume/linistea-astupa-goluri.jpg'/>
-					<iframe scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/795802&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=true&amp;visual=false&amp;color=000000&amp;show_artwork=false"></iframe>
+				<a class='album__cover' href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-linistea-astupa-goluri-mp3.zip'><img src='/img/albume/linistea-astupa-goluri.jpg'/></a>
+
+				<div class='album__links'>
+					<a 
+						class='album__link album__link--apple'
+						href='https://itunes.apple.com/ro/album/lini%C8%99tea-astup%C4%83-goluri/1446082711'
+						target='_blank'
+					></a>
+					<a 
+						class='album__link album__link--spotify'
+						href='https://open.spotify.com/album/5D5hE12gRDb8AtDHiaV3wO'
+						target='_blank'
+					></a>
 				</div>
-				<p class='dl'>
-					Descarcă albumul 
-					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-linistea-astupa-goluri-mp3.zip'>mp3</a>
-					<a href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-linistea-astupa-goluri-flac.zip'>flac</a>
-				</p>
 			</div>
 		</section>
 
@@ -187,7 +230,7 @@
 	</article>
 
 	<footer>
-		&mdash; Alternativ Quartet, 2012&ndash;2016
+		Iglu <span class='slash'>/</span> Alternativ Quartet <span class='dagger'>‡</span> 2008&ndash;2019
 	</footer>
 	
 	<script>
