--- a/index.html
+++ b/index.html
@@ -227,10 +227,30 @@
 
 			<p><a href='tel:+40744627235'>+40744627235</a><br><a href='mailto:alternativquartet@gmail.com'>alternativquartet@gmail.com</a></p>
 		</section>
+
+		<section>
+			<h2 id='colaboratori'><span>Colaboratori și prieteni</span></h2>
+
+			<ul>
+				<li><a href='https://www.facebook.com/ClujNapocaRocknRoll/'>Cluj-Napoca Rock 'n' Roll</a></li>
+				<li><a href='http://definite.ro/'>Definite Rock</a></li>
+				<li><a href='https://www.facebook.com/fluturipeasfalt/'>Fluturi pe asfalt</a></li>
+				<li><a href='https://www.facebook.com/Navamama/'>Nava Mamă</a></li>
+				<li><a href='https://www.facebook.com/pinholes.zmei/'>Pinholes</a></li>
+				<li><a href='https://www.facebook.com/tothesouthbluebird/'>To the South, Bluebird</a></li>
+				<li><a href='https://www.facebook.com/aburelius'>Marcus Aburelius</a></li>
+				<li><a href='https://www.facebook.com/LunaAmaraBand/'>Luna Amară</a></li>
+				<li><a href='https://www.facebook.com/luna.recording.studio/'>Luna Studios</a></li>
+				<li><a href='http://www.colorsoundstudio.com/mastering-studio-paris.html'>Color Sound Mastering</a></li>
+				<li><a href='https://handlewithcare.international/'>Handle With Care</a></li>
+				<li><a href='http://www.knipsolina.de/'>una.knipsolina</a></li>
+				<li><a href='http://lucianindrei.ro/'>Lucian Indrei</a></li>
+			</ul>
+		</section>
 	</article>
 
 	<footer>
-		Iglu <span class='slash'>/</span> Alternativ Quartet <span class='dagger'>‡</span> 2008&ndash;2019
+		AQLAG <span class='dagger'>‡</span> 2008&ndash;2019
 	</footer>
 	
 	<script>
