Update hero img

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://alternativquartet.ro" />
-	<meta property="og:title" content="Iglu / Alternativ Quartet - Turneu 2019" />
-	<meta property="og:description" content="Alternativ Quartet revin în 2019 pe scenă, după o pauză de aproape trei ani de zile, pentru un număr restrâns de concerte alături de To the South, Bluebird." />
-	<meta property="og:image" content="http://alternativquartet.ro/img/hero-aq.png" />
+	<meta property="og:title" content="Iglu / Alternativ Quartet" />
+	<meta property="og:description" content="Noul album de la Iglu și discografia AQ, disponibile acum" />
+	<meta property="og:image" content="http://alternativquartet.ro/img/iglu-cover-fb.png" />
 	 
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:domain" value="alternativquartet.ro" />
-	<meta name="twitter:title" value="Iglu / Alternativ Quartet - Turneu 2019" />
-	<meta name="twitter:description" value="Alternativ Quartet revin în 2019 pe scenă, după o pauză de aproape trei ani de zile, pentru un număr restrâns de concerte alături de To the South, Bluebird." />
-	<meta name="twitter:image" content="http://alternativquartet.ro/img/hero-aq.png" />
+	<meta name="twitter:title" value="Iglu / Alternativ Quartet" />
+	<meta name="twitter:description" value="Noul album de la Iglu și discografia AQ, disponibile acum" />
+	<meta name="twitter:image" content="http://alternativquartet.ro/img/iglu-cover-fb.png" />
 	<meta name="twitter:url" value="http://alternativquartet.ro/" />
 
 	<title>Iglu / Alternativ Quartet</title>
@@ -95,7 +95,7 @@
 		<section>
 			<h2 id='download'><span>Download</span></h2>
 
-			<!-- <div class='a9bum'> -->
+			<div class='album'>
 				<h3>Iglu <span class='slash'>/</span> Stasis</h3>
 				<h4>23 septembrie 2017</h4>
 				<a 
@@ -232,11 +232,12 @@
 			<h2 id='colaboratori'><span>Colaboratori și prieteni</span></h2>
 
 			<ul>
-				<li><a href='https://www.facebook.com/ClujNapocaRocknRoll/'>Cluj-Napoca Rock 'n' Roll</a></li>
+				<li><a href='https://www.facebook.com/ClujNapocaRocknRoll/'>Cluj–Napoca Rock ’n’ Roll</a></li>
 				<li><a href='http://definite.ro/'>Definite Rock</a></li>
 				<li><a href='https://www.facebook.com/fluturipeasfalt/'>Fluturi pe asfalt</a></li>
 				<li><a href='https://www.facebook.com/Navamama/'>Nava Mamă</a></li>
 				<li><a href='https://www.facebook.com/pinholes.zmei/'>Pinholes</a></li>
+				<li><a href=' https://www.facebook.com/fleshrodeo/'>Flesh Rodeo</a></li>
 				<li><a href='https://www.facebook.com/tothesouthbluebird/'>To the South, Bluebird</a></li>
 				<li><a href='https://www.facebook.com/aburelius'>Marcus Aburelius</a></li>
 				<li><a href='https://www.facebook.com/LunaAmaraBand/'>Luna Amară</a></li>
