--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://alternativquartet.ro" />
 	<meta property="og:title" content="Iglu / Alternativ Quartet" />
-	<meta property="og:description" content="Noul album de la Iglu și discografia AQ, disponibile acum" />
+	<meta property="og:description" content="Noul album de la Iglu și discografia AQ, disponibile acum pe alternativquartet.ro" />
 	<meta property="og:image" content="http://alternativquartet.ro/img/iglu-cover-fb.png" />
 	 
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:domain" value="alternativquartet.ro" />
 	<meta name="twitter:title" value="Iglu / Alternativ Quartet" />
-	<meta name="twitter:description" value="Noul album de la Iglu și discografia AQ, disponibile acum" />
+	<meta name="twitter:description" value="Noul album de la Iglu și discografia AQ, disponibile acum pe alternativquartet.ro" />
 	<meta name="twitter:image" content="http://alternativquartet.ro/img/iglu-cover-fb.png" />
 	<meta name="twitter:url" value="http://alternativquartet.ro/" />
 
