Promo video, eventbook

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 		<!-- Nu uita că te aștept -->
 		<div class='yt'>
-			<iframe src="https://www.youtube.com/embed/Wqo6l4mfHv4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/aOeZs5SGnKk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 
 		<section>
@@ -61,6 +61,7 @@
 						<th>Data</th>
 						<th>Oraș</th>
 						<th>Loc</th>
+						<th>Bilete</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -69,24 +70,28 @@
 						<td>29 mai 2019</td>
 						<td>Brașov</td>
 						<td><a href='https://www.facebook.com/events/2154219724827468/' target="_blank">Rockstadt</a></td>
+						<td><a href="https://eventbook.ro/music/bilete-alternativ-quartet-to-the-south-bluebird-live-at-rockstadt" target='_blank'>Eventbook</a></td>
 					</tr>
 
 					<tr>
 						<td>30 mai 2019</td>
 						<td>București</td>
 						<td><a href='https://www.facebook.com/events/1196838363813679/' target="_blank">Control Club</a></td>
+						<td><a href="https://eventbook.ro/music/bilete-alternativ-quartet-to-the-south-bluebird-live-at-control-club" target='_blank'>Eventbook</a></td>
 					</tr>
 
 					<tr>
 						<td>31 mai 2019</td>
 						<td>Cluj-Napoca</td>
 						<td><a href='https://www.facebook.com/events/223384258575628/' target='_blank'>/Form Space</a></td>
+						<td><a href="https://eventbook.ro/music/bilete-alternativ-quartet-to-the-south-bluebird-live-at-form-space" target='_blank'>Eventbook</a></td>
 					</tr>
 
 					<tr>
 						<td>1 iunie 2019</td>
 						<td>Timișoara</td>
 						<td><a href='https://www.facebook.com/events/370944126802444/' target='_blank'>Reflektor</a></td>
+						<td><a href="https://eventbook.ro/music/bilete-alternativ-quartet-to-the-south-bluebird-live-at-reflektor-venue" target='_blank'>Eventbook</a></td>
 					</tr>
 				</tbody>
 			</table>
